--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="title_activity_home_activity">Home_activity</string>
+    <string name="title_activity_attendance_activity">Attendance_activity</string>
 </resources>
