--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,15 @@
     <string name="close">Close</string>
     <string name="title_activity_home_activity">Home_activity</string>
     <string name="title_activity_attendance_activity">Attendance_activity</string>
+    <string name="title_activity_fac_portion_tab">FacPortionTabActivity</string>
+    <string name="tab_text_1">View</string>
+    <string name="tab_text_2">Add</string>
+    <string name="tab_text_3">Update</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
