--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ClassGuru</string>
+    <string name="app_name">SolutionKing</string>
     <string name="etUsername">etUsername</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
